# flatpak_aliaser

./: .gitignore  Cargo.toml  README.md  build_flatpak.sh  com.jan_v2.flatpak_aliaser.yml  flatpak_test_install.sh  tasks
.flatpak-builder/cache/refs/heads/x86_64-com.JanV2.flatpakAliaser.yml/: init
.flatpak-builder/checksums/: x86_64-com.JanV2.flatpakAliaser.yml
build-dir/: metadata  metadata.debuginfo
build-dir/files/: manifest.json
src/: main.rs
