[package]
name = "flatpak_aliaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
confy = "0.5.1"
dirs = "5.0.1"
serde = { version = "1.0.190", features = ["derive"] }
